--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <body>
         <header>
             <div class="logo">
-                <i class="fab fa-youtube"></i><a href="https://youtube.com" target="_blank">Youtube</a></div>
+                <i class="fab fa-youtube"></i>
+                <a href="https://youtube.com" target="_blank">Youtube</a>
+            </div>
             <div class="search">
                 <i class="fas fa-search"></i>
                 <i class="fas fa-ellipsis-v"></i>
@@ -32,70 +34,88 @@
                 allowfullscreen="allowfullscreen"></iframe>
         </div>
         <div class="info">
-            <div class="hashtag">
-                #Oasis #BBC #Live
-            </div>
-            <div class="title">
-                OASIS:Maida Vale Studios,BBC Session,London,England 20/01/2000 [FM RECORDING]
-            </div>
-            <div class="bar_information">
-                <div class="date">
-                    조회수 10,248회 • 2019. 7. 22
+            <section class="info2">
+                <div class="hashtag">
+                    #Oasis #BBC #Live
                 </div>
-                <div class="buttons">
-                    <i class="fas fa-thumbs-up">
-                        10</i>
-                    <i class="fas fa-thumbs-down">
-                        0</i>
-                    <i class="fas fa-share">
-                        공유</i>
-                    <i class="fas fa-list">
-                        저장</i>
-                    <i class="fas fa-ellipsis-h"></i>
+                <div class="title">
+                    OASIS:Maida Vale Studios,BBC Session,London,England 20/01/2000 [FM RECORDING]
                 </div>
-            </div>
-            <div class="uploader">
-                <div class="profile_img">
-                    <img
-                        src="https://yt3.ggpht.com/ytc/AAUvwnjPFn4BiExc57foK8c--RFRJ458pb6qX180gAGQow=s176-c-k-c0x00ffffff-no-rj">
-                </div>
-                <div class="profile_info">
-                    <div class="name">
-                        <a
-                            href="https://www.youtube.com/channel/UCUDVBtnOQi4c7E8jebpjc9Q"
-                            target="_blank">Oasis ♪</a>
+                <div class="bar_information">
+                    <div class="date">
+                        조회수 10,248회 • 2018. 7. 22
                     </div>
-                    <div class="subscriber">
-                        1.0M
+                    <div class="buttons">
+                        <i class="fas fa-thumbs-up">
+                            10</i>
+                        <i class="fas fa-thumbs-down">
+                            0</i>
+                        <i class="fas fa-share">
+                            공유</i>
+                        <i class="fas fa-list">
+                            저장</i>
+                        <i class="fas fa-ellipsis-h"></i>
                     </div>
                 </div>
-                <div class="button_subs">
-                    구독
+
+                <div class="uploader">
+                    <div class="profile_img">
+                        <img
+                            src="https://yt3.ggpht.com/ytc/AAUvwnjPFn4BiExc57foK8c--RFRJ458pb6qX180gAGQow=s176-c-k-c0x00ffffff-no-rj">
+                    </div>
+                    <div class="profile_info">
+                        <div class="name">
+                            <a
+                                href="https://www.youtube.com/channel/UCUDVBtnOQi4c7E8jebpjc9Q"
+                                target="_blank">Oasis ♪</a>
+                        </div>
+                        <div class="subscriber">
+                            1.0M
+                        </div>
+                    </div>
+                    <div class="button_subs">
+                        구독
+                    </div>
+                    
                 </div>
-            </div>
+            </section>
             <div class="next">
                 <div class="upnext">Up Next</div>
                 <ul>
                     <li>
-                        <a href="https://www.youtube.com/watch?v=TUkI8UEN1qY" target="_blank"><img src="https://img.youtube.com/vi/TUkI8UEN1qY/mqdefault.jpg" width="168" height="94"></a>
+                        <a href="https://www.youtube.com/watch?v=TUkI8UEN1qY" target="_blank"><img
+                            src="https://img.youtube.com/vi/TUkI8UEN1qY/mqdefault.jpg"
+                            width="168"
+                            height="94"></a>
                         <div class="next_videos">
-                        <div class="title_next">Noel Gallagher's High Flying Birds - A Dream Is All I Need To Get By (Official Lyric Video)</div>
-                        <div class="uploader_next">Noel Gallagher ♪</div>
-                        <div class="subs">0.26M</div>
-                    </div>
+                            <div class="title_next">Noel Gallagher's High Flying Birds - A Dream Is All I
+                                Need To Get By (Official Lyric Video)</div>
+                            <div class="uploader_next">Noel Gallagher ♪</div>
+                            <div class="subs">0.26M</div>
+                        </div>
                     </li>
-                    <li><a href="https://www.youtube.com/watch?v=SDrPghDvYA4" target="_blank"><img src="https://img.youtube.com/vi/SDrPghDvYA4/mqdefault.jpg" width="168" height="94"></a>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=SDrPghDvYA4" target="_blank"><img
+                            src="https://img.youtube.com/vi/SDrPghDvYA4/mqdefault.jpg"
+                            width="168"
+                            height="94"></a>
                         <div class="next_videos">
-                        <div class="title_next">Liam Gallagher - For What It's Worth (Live At Air Studios)</div>
-                        <div class="uploader_next">Liam Gallagher ♪</div>
-                        <div class="subs">0.33M</div>
-                    </div></li>
-                    <li><a href="https://www.youtube.com/embed/vU05Eksc_iM?controls=0" target="_blank"><img src="https://img.youtube.com/vi/vU05Eksc_iM/mqdefault.jpg" width="168" height="94"></a>
+                            <div class="title_next">Liam Gallagher - For What It's Worth (Live At Air Studios)</div>
+                            <div class="uploader_next">Liam Gallagher ♪</div>
+                            <div class="subs">0.33M</div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/embed/vU05Eksc_iM?controls=0" target="_blank"><img
+                            src="https://img.youtube.com/vi/vU05Eksc_iM/mqdefault.jpg"
+                            width="168"
+                            height="94"></a>
                         <div class="next_videos">
-                        <div class="title_next">Oasis - Wonderwall (Official HD Remastered Video)</div>
-                        <div class="uploader_next">Oasis ♪</div>
-                        <div class="subs">1.0M</div>
-                    </div></li>
+                            <div class="title_next">Oasis - Wonderwall (Official HD Remastered Video)</div>
+                            <div class="uploader_next">Oasis ♪</div>
+                            <div class="subs">1.0M</div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
